# assignment

./: B&W_filter.cpp  CS112_A3_Part1_S5S6_20230003_20230016_20230233.cpp  CS112_A3_Part2B_S5S6_20230003_20230016_20230233.cpp  CS112_A3_Part3_S5S6_20230003_20230016_20230233.cpp  Darken&lighten.cpp  Merge 2 image.cpp  OLD_TV.cpp  README.md  flip_image.cpp  image assignment.cpp  image assiment.cpp  main.cpp  oil_painting.cpp  resizing_tool.cpp  skewing_filter.cpp
BabyPhotoshop_GUI/: ImageProcessing.pro  Main.qml.autosave  main.cpp
BabyPhotoshop_GUI (Incompleted)/: ImageProcessor.cpp  ImageProcessor.h  Main.qml  main.cpp
First_GUI/: AutoInfoBox.qml  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  Main.qml  main.cpp
Integrated Filters in 3 Parts/: CS112_A3_Part1_S5S6_20230003_20230016_20230233.cpp
Integrated Filters in 3 Parts (CS112 Files)/: CS112_A3_Part2B_S5S6_20230003_20230016_20230233.cpp  CS112_A3_Part3_S5S6_20230003_20230016_20230233.cpp
PicMagic_GUI (Incompleted)/: AutoInfoBox.qml  CMakeLists.txt  FileHandler.cpp  FileHandler.h  ImageProcessing.pro  ImageProcessor.cpp  ImageProcessor.h  Main.qml  main.cpp
Seperated Filters/: Darken&lighten.cpp  Detect Edge.cpp  Gray scale.cpp  Noise_Filter.cpp  Sunlight_Filter.cpp  crop_image.cpp  image assignment.cpp  oil_painting.cpp
